load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "services",
    srcs = glob(["*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_api_grpc_proto_google_common_protos//jar",
        "@com_google_protobuf//:protobuf_java",
        "@io_grpc_grpc_java//context",
        "@io_grpc_grpc_java//core",
        "@io_grpc_grpc_java//protobuf",
        "@io_projectreactor_reactor_core//jar",
        "@nl_tulipsolutions_tecl//java/nl/tulipsolutions/api/common:orders_extensions",
        "@nl_tulipsolutions_tecl//java/nl/tulipsolutions/api/pub:ohlc_extensions",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/common:options_jvm_proto",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/common:orders_jvm_proto",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/priv:order_jvm_proto",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/priv:order_reactor_grpc",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/priv:trade_jvm_proto",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/priv:trade_reactor_grpc",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/priv:wallet_jvm_proto",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/priv:wallet_reactor_grpc",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/pub:market_detail_jvm_proto",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/pub:market_detail_reactor_grpc",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/pub:ohlc_jvm_proto",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/pub:ohlc_reactor_grpc",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/pub:orderbook_jvm_proto",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/pub:orderbook_reactor_grpc",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/pub:ticker_jvm_proto",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/pub:ticker_reactor_grpc",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/pub:trade_jvm_proto",
        "@nl_tulipsolutions_tecl//tulipsolutions/api/pub:trade_reactor_grpc",
        "@org_reactivestreams_reactive_streams//jar",
    ],
)
